Side menu drill scroll fix + dynamic badge style (#551)
* style(SideMenuDrill): show a scrollbar in sub menu navigation block if the height requires

* feat(SideMenu): Link badge can be either inline or fixed

* allow to set the dataHook for both SubMenu.NavigationLink and SideMenuDrill.SubMenu

--- a/src/SideMenu/DrillView/DrillView.scss
+++ b/src/SideMenu/DrillView/DrillView.scss
@@ -13,3 +13,13 @@
   height: 100%;
   width: 100%;
 }
+
+.subMenu {
+  display: flex;
+  flex-direction: column;
+}
+
+.openSubMenu {
+  display: flex;
+  flex-direction: column;
+}
