--- a/src/SideMenu/core/navigation/styles.scss
+++ b/src/SideMenu/core/navigation/styles.scss
@@ -124,12 +124,25 @@ $padding-vertical: 14px;
     content: '';
     vertical-align: top;
     display: inline-block;
-    position: relative;
     height: 0.5em;
-    left: 0.3em;
-    top: 0.3em;
     width: 0.5em;
     background: red;
     border-radius: 50%;
+  }
+}
+
+.inlineLinkBadge {
+  &::before {
+    position: relative;
+    left: 0.6em;
+    top: 0.3em;
+  }
+}
+
+.fixedLinkBadge {
+  &::before {
+    position: absolute;
+    right: 1.8em;
+    top: 1.3em;
   }
 }
